@@ -32,6 +32,7 @@
     <property name="out.main" value="./build/main"/>
     <property name="out.test" value="./build/test"/>
     <property name="test.report.dir" value="./build/report"/>
+    <property name="dos2unix" value="./tools/dos2unix/bin/dos2unix.exe"/>
 
     <taskdef resource="net/sf/antcontrib/antcontrib.properties">
         <classpath>
@@ -70,6 +71,12 @@
     </target>
 
     <target name="clean">
+        <if>
+            <os family="mac"/>
+            <then>
+                <symlink action="delete" link="${dir.pack}/AionWallet/Applications"/>
+            </then>
+        </if>
         <delete dir="${dir.out}" includeEmptyDirs="true" includes="**/*/"/>
         <delete dir="${test.report.dir}"/>
         <delete dir="${dir.pack}"/>
@@ -82,7 +89,7 @@
         <javac
                 debuglevel="source,lines,vars"
                 includeantruntime="false"
-                release="10"
+                release="11"
                 srcdir="${src.test}"
                 destdir="${out.test}"
                 includes="**/*Test.java"
@@ -124,7 +131,7 @@
         <javac
                 debuglevel="source,lines,vars"
                 includeantruntime="false"
-                release="10"
+                release="11"
                 srcdir="./"
                 destdir="${out.main}"
                 excludes="src/main/java/org/aion/connector/api/**/*.java"
@@ -159,12 +166,18 @@
                 debug="true"
                 debuglevel="source,lines,vars"
                 includeantruntime="false"
-                release="10"
+                release="11"
                 srcdir="./"
                 destdir="${out.main}"
                 excludes="src/main/java/org/aion/wallet/connector/core/**/*.java"
                 includes="src/main/java/**/*.java"
         >
+            <compilerarg value="--add-exports=aion.api.client/org.aion.api.log=aion.wallet"/>
+            <compilerarg value="--add-exports=aion.api.client/org.aion.api.sol=aion.wallet"/>
+            <compilerarg value="--add-exports=aion.api.client/org.aion.api.sol.impl=aion.wallet"/>
+            <compilerarg value="--add-exports=aion.api.client/org.aion.api.impl.internal=aion.wallet"/>
+            <compilerarg value="--add-exports=aion.api.client/org.aion.api.type.core.account=aion.wallet"/>
+            <compilerarg value="--add-exports=aion.api.client/org.aion.api.type.core.tx=aion.wallet"/>
             <modulepath>
                 <fileset dir="${dir.lib}" includes="*.jar"/>
                 <fileset dir="${dir.mod}" includes="*.jar"/>
@@ -190,46 +203,63 @@
 
     <target name="pack" depends="build_standalone">
         <mkdir dir="${dir.pack}"/>
-        <exec executable="/bin/bash"  failonerror="true">
-            <arg value="${dir.script}/prepack.sh" />
-        </exec>
 
         <if>
             <os family="mac"/>
             <then>
+                <exec executable="/bin/bash" failonerror="true">
+                    <arg value="-l"/>
+                    <arg value="${dir.script}/prepack.sh"/>
+                </exec>
                 <property name="native.source" value="${res.main}/native/mac"/>
                 <property name="native.dest" value="${project.name}/native/mac"/>
                 <property name="launcher" value="AionWalletLauncher"/>
+                <property name="jfx.suffix" value="mac"/>
             </then>
             <elseif>
                 <os family="windows"/>
                 <then>
+                    <exec executable="${dos2unix}" failonerror="true">
+                        <arg value="${dir.script}/prepack.sh"/>
+                    </exec>
+                    <exec executable="C:\cygwin64\bin\bash.exe" failonerror="true">
+                        <arg value="${dir.script}/prepack.sh"/>
+                    </exec>
                     <property name="native.source" value="${res.main}/native/win"/>
                     <property name="native.dest" value="${project.name}/native/win"/>
+                    <property name="jfx.suffix" value="win"/>
                 </then>
             </elseif>
             <elseif>
                 <os family="unix"/>
                 <then>
+                    <exec executable="/bin/bash" failonerror="true">
+                        <arg value="-l"/>
+                        <arg value="${dir.script}/prepack.sh"/>
+                    </exec>
                     <property name="native.source" value="${res.main}/native/linux"/>
                     <property name="native.dest" value="${project.name}/native/linux"/>
                     <property name="launcher" value="aion_ui.sh"/>
+                    <property name="jfx.suffix" value="linux"/>
                 </then>
             </elseif>
         </if>
+        
+        <echo message="${jfx.suffix}"/>
         <zip destfile="${dir.pack}/aion_ui${suffix}.zip">
             <zipfileset dir="${dir.lib}" filemode="755" prefix="${project.name}/lib">
                 <include name="*.jar"/>
                 <exclude name="ant-contrib-0.6.jar"/>
+                <exclude name="javafx-*.jar"/>
+            </zipfileset>
+            <zipfileset dir="${dir.lib}" filemode="755" prefix="${project.name}/lib">
+                <include name="javafx-*-${jfx.suffix}.jar"/>
             </zipfileset>
             <zipfileset dir="${dir.mod}" filemode="755" prefix="${project.name}/mod">
                 <include name="*.jar"/>
             </zipfileset>
             <zipfileset dir="${dir.pack}" filemode="755" prefix="${project.name}/mod">
                 <include name="*.jar"/>
-            </zipfileset>
-            <zipfileset dir="${dir.rt}" filemode="755" prefix="${project.name}/rt">
-                <include name="**/*"/>
             </zipfileset>
             <zipfileset dir="${dir.cfg}" filemode="755" prefix="${project.name}/config">
                 <include name="*.xml"/>
@@ -238,19 +268,18 @@
                 <include name="blake2b/**"/>
                 <include name="sodium/**"/>
                 <include name="zmq/**"/>
-                <include name="ledger/**"/>
             </zipfileset>
             <zipfileset dir="${dir.script}" filemode="755" prefix="${project.name}">
                 <include name="${launcher}"/>
             </zipfileset>
+            <zipfileset dir="${dir.rt}" filemode="755" prefix="${project.name}"/>
         </zip>
         <delete file="${dir.pack}/aion_ui${suffix}.jar"/>
+        <delete dir="${dir.rt}"/>
         <if>
             <os family="windows"/>
             <then>
                 <unzip src="${dir.pack}/aion_ui${suffix}.zip" dest="${dir.pack}"/>
-                <copy file="${dir.script}/unzip.exe" todir="${dir.pack}/aion_ui"/>
-                <copy file="${dir.script}/wget.exe" todir="${dir.pack}/aion_ui"/>
                 <copy todir="${dir.pack}/aion_ui" overwrite="true" verbose="true">
                     <fileset dir="${dir.script}">
                         <filename regex="\/*.dll|\/*.pfx"/>
@@ -296,7 +325,7 @@
 
                     <!--Launcher and natives-->
                     <mkdir dir="${mac.dir}/MacOS"/>
-                    <copy todir="${mac.dir}/MacOS" file="${dir.pack}/aion_ui${suffix}/AionWalletLauncher"/>
+                    <copy todir="${mac.dir}/MacOS" file="${dir.pack}/aion_ui/AionWalletLauncher"/>
                     <copy todir="${mac.dir}/MacOS" overwrite="true" verbose="true">
                         <fileset dir="${dir.pack}/aion_ui">
                             <include name="native/**"/>
@@ -307,19 +336,15 @@
                         <arg value="755"/>
                         <arg value="${mac.dir}/MacOS/AionWalletLauncher"/>
                     </exec>
+                    <move todir='${mac.dir}/MacOS/'>
+                        <fileset dir="${dir.pack}/aion_ui">
+                            <include name="java/"/>
+                        </fileset>
+                    </move>
                     <exec executable="chmod">
+                        <arg value="-R"/>
                         <arg value="755"/>
-                        <arg value="${mac.dir}/MacOS/native/mac/ledger/hid.tar.gz"/>
-                    </exec>
-                    <exec executable="curl">
-                        <arg value="-o"/>
-                        <arg value="${mac.dir}/MacOS/jre-10.0.2.tar.gz"/>
-                        <arg value="-L"/>
-                        <arg value="-O"/>
-                        <arg value="-H"/>
-                        <arg value="'Cookie: oraclelicense=accept-securebackup-cookie'"/>
-                        <arg value="-k"/>
-                        <arg value="https://download.oracle.com/otn-pub/java/jdk/10.0.2+13/19aef61b38124481863b1413dce1855f/jre-10.0.2_osx-x64_bin.tar.gz"/>
+                        <arg value="${mac.dir}/MacOS/java/bin"/>
                     </exec>
 
                     <!--icons-->
